# pi-probe-sniffer

./: .env.example  .gitignore  Makefile  PiSniffer.py  Probe.py  README.md  config.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.sh  start.sh
config/systemd/: probe-sniffer-api.service  probe-sniffer.service
db/: supabase_utils.py
probe_sniffer/: config.py
probe_sniffer/api/: app.py  discord_bot.py  schemas.py
probe_sniffer/api/routes/: devices.py  fingerprints.py  identities.py  sightings.py
probe_sniffer/capture/: sniffer.py
probe_sniffer/data/: OUI.txt
probe_sniffer/models/: probe.py
probe_sniffer/notifications/: __init__.py  discord.py  formatter.py
probe_sniffer/storage/: database.py  dto.py  queries.py  schema.py
probe_sniffer/utils/: probe_utils.py  time_utils.py
scripts/: bootstrap.sh  csv_handler.py  daily_csv.py  deploy.sh  remote-logs.sh  remote-query.sh  remote-restart.sh  remote-status.sh  setup-remote.sh  testOUI.py
src/probe_sniffer/: __init__.py  __main__.py
src/probe_sniffer/capture/: sniffer.py
src/probe_sniffer/storage/: database.py  queries.py  schema.py  supabase_utils.py
system/: interfaces
tests/: csv_tests.py  probe_util_tests.py
ui/: package.json  pnpm-lock.yaml
ui/src/lib/api/: client.ts
ui/src/lib/components/: PageHeader.svelte  Pagination.svelte
ui/src/lib/stores/: devices.ts  liveProbes.ts
ui/src/lib/styles/: global.css
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/devices/: +page.svelte
ui/src/routes/fingerprints/: +page.svelte
utils/: probes.py  time.py
(+3 files in other folders)
